--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'  //添加android缺失的部分javax注解
 
 
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+
+
 
 }
